// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`test floating-panel component slots > test floating-panel component default 1`] = `
"<div class=\\"var-floating-panel var-elevation--2\\" style=\\"height: 460.79999999999995px; transform: translateY(calc(100% - 100px)); transition: transform 300ms var(--floating-panel-transition-timing-function);\\">
  <div class=\\"var-floating-panel__header\\">
    <div class=\\"var-floating-panel__header-toolbar\\"></div>
  </div>
  <div class=\\"var-floating-panel__content\\">Hello Varlet!</div>
</div>"
`;

exports[`test floating-panel components props > test floating-panel anchor 1`] = `
"<div class=\\"var-floating-panel var-elevation--2\\" style=\\"height: 460.79999999999995px; transform: translateY(calc(100% - 460.79999999999995px)); transition: transform 300ms var(--floating-panel-transition-timing-function);\\">
  <div class=\\"var-floating-panel__header\\">
    <div class=\\"var-floating-panel__header-toolbar\\"></div>
  </div>
  <div class=\\"var-floating-panel__content\\"></div>
</div>"
`;

exports[`test floating-panel components props > test floating-panel anchor 2`] = `
"<div class=\\"var-floating-panel var-elevation--2\\" style=\\"height: 460.79999999999995px; transform: translateY(calc(100% - 100px)); transition: transform 300ms var(--floating-panel-transition-timing-function);\\">
  <div class=\\"var-floating-panel__header\\">
    <div class=\\"var-floating-panel__header-toolbar\\"></div>
  </div>
  <div class=\\"var-floating-panel__content\\"></div>
</div>"
`;

exports[`test floating-panel components props > test floating-panel anchor 3`] = `
"<div class=\\"var-floating-panel var-elevation--2\\" style=\\"height: 460.79999999999995px; transform: translateY(calc(100% - 100px)); transition: transform 300ms var(--floating-panel-transition-timing-function);\\">
  <div class=\\"var-floating-panel__header\\">
    <div class=\\"var-floating-panel__header-toolbar\\"></div>
  </div>
  <div class=\\"var-floating-panel__content\\"></div>
</div>"
`;

exports[`test floating-panel components props > test floating-panel anchors 1`] = `
"<div class=\\"var-floating-panel var-elevation--2\\" style=\\"height: 400px; transform: translateY(calc(100% - 300px)); transition: transform 300ms var(--floating-panel-transition-timing-function);\\">
  <div class=\\"var-floating-panel__header\\">
    <div class=\\"var-floating-panel__header-toolbar\\"></div>
  </div>
  <div class=\\"var-floating-panel__content\\"></div>
</div>"
`;

exports[`test floating-panel components props > test floating-panel anchors 2`] = `
"<div class=\\"var-floating-panel var-elevation--2\\" style=\\"height: 400px; transform: translateY(calc(100% - 300px)); transition: transform 300ms var(--floating-panel-transition-timing-function);\\">
  <div class=\\"var-floating-panel__header\\">
    <div class=\\"var-floating-panel__header-toolbar\\"></div>
  </div>
  <div class=\\"var-floating-panel__content\\"></div>
</div>"
`;

exports[`test floating-panel components props > test floating-panel anchors 3`] = `
"<div class=\\"var-floating-panel var-elevation--2\\" style=\\"height: 400px; transform: translateY(calc(100% - 300px)); transition: transform 300ms var(--floating-panel-transition-timing-function);\\">
  <div class=\\"var-floating-panel__header\\">
    <div class=\\"var-floating-panel__header-toolbar\\"></div>
  </div>
  <div class=\\"var-floating-panel__content\\"></div>
</div>"
`;

exports[`test floating-panel components props > test floating-panel anchors 4`] = `
"<div class=\\"var-floating-panel var-elevation--2\\" style=\\"height: 400px; transform: translateY(calc(100% - 300px)); transition: transform 300ms var(--floating-panel-transition-timing-function);\\">
  <div class=\\"var-floating-panel__header\\">
    <div class=\\"var-floating-panel__header-toolbar\\"></div>
  </div>
  <div class=\\"var-floating-panel__content\\"></div>
</div>"
`;

exports[`test floating-panel components props > test floating-panel anchors 5`] = `
"<div class=\\"var-floating-panel var-elevation--2\\" style=\\"height: 400px; transform: translateY(calc(100% - 400px)); transition: transform 300ms var(--floating-panel-transition-timing-function);\\">
  <div class=\\"var-floating-panel__header\\">
    <div class=\\"var-floating-panel__header-toolbar\\"></div>
  </div>
  <div class=\\"var-floating-panel__content\\"></div>
</div>"
`;

exports[`test floating-panel components props > test floating-panel anchors 6`] = `
"<div class=\\"var-floating-panel var-elevation--2\\" style=\\"height: 500px; transform: translateY(calc(100% - 400px)); transition: transform 300ms var(--floating-panel-transition-timing-function);\\">
  <div class=\\"var-floating-panel__header\\">
    <div class=\\"var-floating-panel__header-toolbar\\"></div>
  </div>
  <div class=\\"var-floating-panel__content\\"></div>
</div>"
`;

exports[`test floating-panel components props > test floating-panel anchors 7`] = `
"<div class=\\"var-floating-panel var-elevation--2\\" style=\\"height: 500px; transform: translateY(calc(100% - 400px)); transition: transform 300ms var(--floating-panel-transition-timing-function);\\">
  <div class=\\"var-floating-panel__header\\">
    <div class=\\"var-floating-panel__header-toolbar\\"></div>
  </div>
  <div class=\\"var-floating-panel__content\\"></div>
</div>"
`;

exports[`test floating-panel components props > test floating-panel contentDraggable 1`] = `
"<div class=\\"var-floating-panel var-elevation--2\\" style=\\"height: 460.79999999999995px; transform: translateY(calc(100% - 460.79999999999995px)); transition: transform 300ms var(--floating-panel-transition-timing-function);\\">
  <div class=\\"var-floating-panel__header\\">
    <div class=\\"var-floating-panel__header-toolbar\\"></div>
  </div>
  <div class=\\"var-floating-panel__content\\"></div>
</div>"
`;

exports[`test floating-panel components props > test floating-panel contentDraggable 2`] = `
"<div class=\\"var-floating-panel var-elevation--2\\" style=\\"height: 460.79999999999995px; transform: translateY(calc(100% - 460.79999999999995px)); transition: transform 300ms var(--floating-panel-transition-timing-function);\\">
  <div class=\\"var-floating-panel__header\\">
    <div class=\\"var-floating-panel__header-toolbar\\"></div>
  </div>
  <div class=\\"var-floating-panel__content\\"></div>
</div>"
`;

exports[`test floating-panel components props > test floating-panel duration 1`] = `
"<div class=\\"var-floating-panel var-elevation--2\\" style=\\"height: 460.79999999999995px; transform: translateY(calc(100% - 100px)); transition: transform 0.4ms var(--floating-panel-transition-timing-function);\\">
  <div class=\\"var-floating-panel__header\\">
    <div class=\\"var-floating-panel__header-toolbar\\"></div>
  </div>
  <div class=\\"var-floating-panel__content\\"></div>
</div>"
`;

exports[`test floating-panel components props > test floating-panel teleport 1`] = `"<div class=\\"var-floating-panel var-elevation--2\\" style=\\"height: 460.79999999999995px; transform: translateY(calc(100% - 100px)); transition: transform 300ms var(--floating-panel-transition-timing-function);\\"><div class=\\"var-floating-panel__header\\"><div class=\\"var-floating-panel__header-toolbar\\"></div></div><div class=\\"var-floating-panel__content\\"></div></div>"`;
